TinyGrammarParser.py
# Generated from TinyGrammar.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TinyGrammarParser ( Parser ):

    grammarFileName = "TinyGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'int'", "'float'", "'char'", "'bool'", 
                     "','", "'('", "')'", "'{'", "'}'", "'if'", "'else'", 
                     "'while'", "'return'", "'='", "'['", "']'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'true'", "'false'", "'<'", 
                     "'>'", "'<='", "'>='", "'=='", "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "IDENTIFIER", 
                      "NUMBER", "BOOLEAN", "CHAR_LITERAL", "WS" ]

    RULE_program = 0
    RULE_declarationList = 1
    RULE_declaration = 2
    RULE_variableDeclaration = 3
    RULE_dataType = 4
    RULE_identifierList = 5
    RULE_functionDeclaration = 6
    RULE_parameterList = 7
    RULE_parameter = 8
    RULE_compoundStmt = 9
    RULE_localDeclarations = 10
    RULE_statementList = 11
    RULE_statement = 12
    RULE_expressionStmt = 13
    RULE_selectionStmt = 14
    RULE_iterationStmt = 15
    RULE_returnStmt = 16
    RULE_expression = 17
    RULE_variable = 18
    RULE_simpleExpression = 19
    RULE_additiveExpression = 20
    RULE_term = 21
    RULE_factor = 22
    RULE_call = 23
    RULE_args = 24
    RULE_relationalOperator = 25

    ruleNames =  [ "program", "declarationList", "declaration", "variableDeclaration", 
                   "dataType", "identifierList", "functionDeclaration", 
                   "parameterList", "parameter", "compoundStmt", "localDeclarations", 
                   "statementList", "statement", "expressionStmt", "selectionStmt", 
                   "iterationStmt", "returnStmt", "expression", "variable", 
                   "simpleExpression", "additiveExpression", "term", "factor", 
                   "call", "args", "relationalOperator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    IDENTIFIER=31
    NUMBER=32
    BOOLEAN=33
    CHAR_LITERAL=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationList(self):
            return self.getTypedRuleContext(TinyGrammarParser.DeclarationListContext,0)


        def getRuleIndex(self):
            return TinyGrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = TinyGrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.declarationList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(TinyGrammarParser.DeclarationContext,0)


        def declarationList(self):
            return self.getTypedRuleContext(TinyGrammarParser.DeclarationListContext,0)


        def getRuleIndex(self):
            return TinyGrammarParser.RULE_declarationList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarationList" ):
                listener.enterDeclarationList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarationList" ):
                listener.exitDeclarationList(self)




    def declarationList(self):

        localctx = TinyGrammarParser.DeclarationListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declarationList)
        try:
            self.state = 58
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 3, 4, 5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.declaration()
                self.state = 55
                self.declarationList()
                pass
            elif token in [-1]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(TinyGrammarParser.VariableDeclarationContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(TinyGrammarParser.FunctionDeclarationContext,0)


        def getRuleIndex(self):
            return TinyGrammarParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = TinyGrammarParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.functionDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dataType(self):
            return self.getTypedRuleContext(TinyGrammarParser.DataTypeContext,0)


        def identifierList(self):
            return self.getTypedRuleContext(TinyGrammarParser.IdentifierListContext,0)


        def getRuleIndex(self):
            return TinyGrammarParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)




    def variableDeclaration(self):

        localctx = TinyGrammarParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.dataType()
            self.state = 65
            self.identifierList()
            self.state = 66
            self.match(TinyGrammarParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TinyGrammarParser.RULE_dataType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataType" ):
                listener.enterDataType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataType" ):
                listener.exitDataType(self)




    def dataType(self):

        localctx = TinyGrammarParser.DataTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dataType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 60) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(TinyGrammarParser.IDENTIFIER)
            else:
                return self.getToken(TinyGrammarParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return TinyGrammarParser.RULE_identifierList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifierList" ):
                listener.enterIdentifierList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifierList" ):
                listener.exitIdentifierList(self)




    def identifierList(self):

        localctx = TinyGrammarParser.IdentifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_identifierList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(TinyGrammarParser.IDENTIFIER)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 71
                self.match(TinyGrammarParser.T__5)
                self.state = 72
                self.match(TinyGrammarParser.IDENTIFIER)
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dataType(self):
            return self.getTypedRuleContext(TinyGrammarParser.DataTypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(TinyGrammarParser.IDENTIFIER, 0)

        def parameterList(self):
            return self.getTypedRuleContext(TinyGrammarParser.ParameterListContext,0)


        def compoundStmt(self):
            return self.getTypedRuleContext(TinyGrammarParser.CompoundStmtContext,0)


        def getRuleIndex(self):
            return TinyGrammarParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)




    def functionDeclaration(self):

        localctx = TinyGrammarParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functionDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.dataType()
            self.state = 79
            self.match(TinyGrammarParser.IDENTIFIER)
            self.state = 80
            self.match(TinyGrammarParser.T__6)
            self.state = 81
            self.parameterList()
            self.state = 82
            self.match(TinyGrammarParser.T__7)
            self.state = 83
            self.compoundStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyGrammarParser.ParameterContext)
            else:
                return self.getTypedRuleContext(TinyGrammarParser.ParameterContext,i)


        def getRuleIndex(self):
            return TinyGrammarParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)




    def parameterList(self):

        localctx = TinyGrammarParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 3, 4, 5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.parameter()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 86
                    self.match(TinyGrammarParser.T__5)
                    self.state = 87
                    self.parameter()
                    self.state = 92
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dataType(self):
            return self.getTypedRuleContext(TinyGrammarParser.DataTypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(TinyGrammarParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return TinyGrammarParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)




    def parameter(self):

        localctx = TinyGrammarParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.dataType()
            self.state = 97
            self.match(TinyGrammarParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompoundStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def localDeclarations(self):
            return self.getTypedRuleContext(TinyGrammarParser.LocalDeclarationsContext,0)


        def statementList(self):
            return self.getTypedRuleContext(TinyGrammarParser.StatementListContext,0)


        def getRuleIndex(self):
            return TinyGrammarParser.RULE_compoundStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompoundStmt" ):
                listener.enterCompoundStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompoundStmt" ):
                listener.exitCompoundStmt(self)




    def compoundStmt(self):

        localctx = TinyGrammarParser.CompoundStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_compoundStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(TinyGrammarParser.T__8)
            self.state = 100
            self.localDeclarations(0)
            self.state = 101
            self.statementList(0)
            self.state = 102
            self.match(TinyGrammarParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocalDeclarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def localDeclarations(self):
            return self.getTypedRuleContext(TinyGrammarParser.LocalDeclarationsContext,0)


        def variableDeclaration(self):
            return self.getTypedRuleContext(TinyGrammarParser.VariableDeclarationContext,0)


        def getRuleIndex(self):
            return TinyGrammarParser.RULE_localDeclarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocalDeclarations" ):
                listener.enterLocalDeclarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocalDeclarations" ):
                listener.exitLocalDeclarations(self)



    def localDeclarations(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TinyGrammarParser.LocalDeclarationsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_localDeclarations, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self._ctx.stop = self._input.LT(-1)
            self.state = 109
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = TinyGrammarParser.LocalDeclarationsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_localDeclarations)
                    self.state = 105
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 106
                    self.variableDeclaration() 
                self.state = 111
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class StatementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementList(self):
            return self.getTypedRuleContext(TinyGrammarParser.StatementListContext,0)


        def statement(self):
            return self.getTypedRuleContext(TinyGrammarParser.StatementContext,0)


        def getRuleIndex(self):
            return TinyGrammarParser.RULE_statementList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementList" ):
                listener.enterStatementList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementList" ):
                listener.exitStatementList(self)



    def statementList(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TinyGrammarParser.StatementListContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_statementList, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self._ctx.stop = self._input.LT(-1)
            self.state = 117
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = TinyGrammarParser.StatementListContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_statementList)
                    self.state = 113
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 114
                    self.statement() 
                self.state = 119
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressionStmt(self):
            return self.getTypedRuleContext(TinyGrammarParser.ExpressionStmtContext,0)


        def compoundStmt(self):
            return self.getTypedRuleContext(TinyGrammarParser.CompoundStmtContext,0)


        def selectionStmt(self):
            return self.getTypedRuleContext(TinyGrammarParser.SelectionStmtContext,0)


        def iterationStmt(self):
            return self.getTypedRuleContext(TinyGrammarParser.IterationStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(TinyGrammarParser.ReturnStmtContext,0)


        def getRuleIndex(self):
            return TinyGrammarParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = TinyGrammarParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_statement)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 23, 24, 31, 32, 33, 34]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.expressionStmt()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.compoundStmt()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 122
                self.selectionStmt()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 4)
                self.state = 123
                self.iterationStmt()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 5)
                self.state = 124
                self.returnStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(TinyGrammarParser.ExpressionContext,0)


        def getRuleIndex(self):
            return TinyGrammarParser.RULE_expressionStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStmt" ):
                listener.enterExpressionStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStmt" ):
                listener.exitExpressionStmt(self)




    def expressionStmt(self):

        localctx = TinyGrammarParser.ExpressionStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_expressionStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.expression()
            self.state = 128
            self.match(TinyGrammarParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectionStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(TinyGrammarParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyGrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(TinyGrammarParser.StatementContext,i)


        def getRuleIndex(self):
            return TinyGrammarParser.RULE_selectionStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectionStmt" ):
                listener.enterSelectionStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectionStmt" ):
                listener.exitSelectionStmt(self)




    def selectionStmt(self):

        localctx = TinyGrammarParser.SelectionStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_selectionStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(TinyGrammarParser.T__10)
            self.state = 131
            self.match(TinyGrammarParser.T__6)
            self.state = 132
            self.expression()
            self.state = 133
            self.match(TinyGrammarParser.T__7)
            self.state = 134
            self.statement()
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 135
                self.match(TinyGrammarParser.T__11)
                self.state = 136
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IterationStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(TinyGrammarParser.ExpressionContext,0)


        def statement(self):
            return self.getTypedRuleContext(TinyGrammarParser.StatementContext,0)


        def getRuleIndex(self):
            return TinyGrammarParser.RULE_iterationStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIterationStmt" ):
                listener.enterIterationStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIterationStmt" ):
                listener.exitIterationStmt(self)




    def iterationStmt(self):

        localctx = TinyGrammarParser.IterationStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_iterationStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(TinyGrammarParser.T__12)
            self.state = 140
            self.match(TinyGrammarParser.T__6)
            self.state = 141
            self.expression()
            self.state = 142
            self.match(TinyGrammarParser.T__7)
            self.state = 143
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(TinyGrammarParser.ExpressionContext,0)


        def getRuleIndex(self):
            return TinyGrammarParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)




    def returnStmt(self):

        localctx = TinyGrammarParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_returnStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(TinyGrammarParser.T__13)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 32237420672) != 0):
                self.state = 146
                self.expression()


            self.state = 149
            self.match(TinyGrammarParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(TinyGrammarParser.VariableContext,0)


        def expression(self):
            return self.getTypedRuleContext(TinyGrammarParser.ExpressionContext,0)


        def simpleExpression(self):
            return self.getTypedRuleContext(TinyGrammarParser.SimpleExpressionContext,0)


        def getRuleIndex(self):
            return TinyGrammarParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):
